--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<link rel="stylesheet" href="CSS/normalize.css">
 	<link rel="stylesheet" href="CSS/style.css">
+	<!-- <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> ***CHANGE FONT*** -->
+	<!-- <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"> -->
 </head>
 <body>
-	
+
 	<script src="JS/app.js"></script>
 </body>
 </html>
